# PyN_Library

./: README.md  pyproject.toml
src/PyN_Library/: __init__.py  fncDataFrame.py  fncDateTime.py  fncExcel.py  fncFile_folder.py  fncGeneral.py  fncPostgres.py  fncSqlServer.py  fncSqlite.py  fncString.py  howTo.txt  testFnc.py
src/PyN_Library.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
